# ask_chuck_api

./: .dockerignore  .gitignore  Dockerfile  Pipfile  pyproject.toml  requirements.txt
ask_chuck_api/: main.py
ask_chuck_api/auth/: auth.py
ask_chuck_api/rag/: constants.py  data_ingestion_system.py  handle_conversation.py  handle_query.py  rag_chain.py  rag_chat_history.py  serving_system.py
