[tool.poetry]
name = "ask-chuck-api"
version = "0.1.0"
description = ""
authors = ["Vishal Govind <vishal.govind2098@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
langchain-community = "^0.2.12"
pypdf = "^4.3.1"
rapidocr-onnxruntime = "^1.3.24"
langchain = "^0.2.14"
langchain-google-vertexai = "^1.0.8"
langchain-google-alloydb-pg = "^0.5.0"
firebase-admin = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
